sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/Purchase_Order_Item_Price_Change__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Item Price Change</label>
    <nameField>
        <displayFormat>POIUC-{0000000}</displayFormat>
        <label>Purchase Order Line Item Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Items Price Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>