sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Current_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Gross_Value__c</fullName>
    <label>Current Gross Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>