sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Current_Unit_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Net_Price__c</fullName>
    <label>Current Unit Net Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>