sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/New_Unit_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Unit_Item_Cost__c</fullName>
    <label>New Unit Item Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>