sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Purchase Order Items Price Changes</relationshipLabel>
    <relationshipName>Purchase_Order_Items_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>