sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Purchase_UoM__c.field-meta.xml
<CustomField>
    <fullName>Purchase_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Purchase Order Items Price Changes</relationshipLabel>
    <relationshipName>Purchase_Order_Items_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>