sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <label>VAT Amount</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>