sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Items Price Changes</relationshipLabel>
    <relationshipName>Purchase_Order_Items_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>