sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item_Price_Change__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Pre-Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>